--- a/installation/index.html
+++ b/installation/index.html
@@ -27,7 +27,7 @@
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="top" title="Daft 0.0.1 documentation" href="../" />
     <link rel="next" title="Quckstart" href="../quickstart/" />
-    <link rel="prev" title="Daft" href="../" />
+    <link rel="prev" title="User Guide" href="../" />
 
      
     <link rel="shortcut icon" href="../_static/favicon.png">
@@ -61,13 +61,13 @@
       <div class="sphinxsidebar">
         <div class="sphinxsidebarwrapper"><div class="related">
     <div class="previous">
-        <a href="../" title="previous chapter">&laquo; Daft</a>
+        <a href="../" title="previous chapter">&laquo; User Guide</a>
     </div>
     <div class="next">
         <a href="../quickstart/" title="next chapter">Quckstart &raquo;</a>
     </div>
 </div><div id="searchbox" style="display: none">
-    <form class="search" action="search/" method="get">
+    <form class="search" action="../search/" method="get">
         <input type="text" name="q" class="searchfield" placeholder="Search..." />
         <input type="hidden" name="check_keywords" value="yes" />
         <input type="hidden" name="area" value="default" />
@@ -80,8 +80,10 @@
     </div>
 
     <div class="footer">
-      &copy; Copyright 2012, Dan Foreman-Mackey & David W. Hogg.
+        Copyright 2012, Dan Foreman-Mackey & David W. Hogg. Released under
+            <a href="https://raw.github.com/dfm/daft/master/LICENSE.rst">MIT License</a>.
     </div>
+
     <a href="https://github.com/dfm/daft" class="github">
         <img style="position: absolute; top: 0; right: 0; border: 0;"
             src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"
