--- a/quickstart/index.html
+++ b/quickstart/index.html
@@ -67,7 +67,7 @@
         <a href="../api/" title="next chapter">API &raquo;</a>
     </div>
 </div><div id="searchbox" style="display: none">
-    <form class="search" action="search/" method="get">
+    <form class="search" action="../search/" method="get">
         <input type="text" name="q" class="searchfield" placeholder="Search..." />
         <input type="hidden" name="check_keywords" value="yes" />
         <input type="hidden" name="area" value="default" />
@@ -80,8 +80,10 @@
     </div>
 
     <div class="footer">
-      &copy; Copyright 2012, Dan Foreman-Mackey & David W. Hogg.
+        Copyright 2012, Dan Foreman-Mackey & David W. Hogg. Released under
+            <a href="https://raw.github.com/dfm/daft/master/LICENSE.rst">MIT License</a>.
     </div>
+
     <a href="https://github.com/dfm/daft" class="github">
         <img style="position: absolute; top: 0; right: 0; border: 0;"
             src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"
