--- a/search/index.html
+++ b/search/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
@@ -27,10 +26,10 @@
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <script type="text/javascript" src="../_static/searchtools.js"></script>
     <link rel="top" title="Daft 0.0.1 documentation" href="../" />
-  <script type="text/javascript">
-    jQuery(function() { Search.loadIndex("../searchindex.js"); });
-  </script>
-  
+    <script type="text/javascript">
+        jQuery(function() { Search.loadIndex("../searchindex.js"); });
+    </script>
+    
 
      
     <link rel="shortcut icon" href="../_static/favicon.png">
@@ -67,8 +66,7 @@
     containing fewer words won't appear in the result list.
   </p>
   <form action="" method="get">
-    <input type="text" name="q" value="" />
-    <input type="submit" value="search" />
+    <input type="text" name="q" class="searchfield" placeholder="Search..." value="" />
     <span id="search-progress" style="padding-left: 10px"></span>
   </form>
   
@@ -84,7 +82,7 @@
       <div class="sphinxsidebar">
         <div class="sphinxsidebarwrapper"><div class="related">
 </div><div id="searchbox" style="display: none">
-    <form class="search" action="search/" method="get">
+    <form class="search" action="#" method="get">
         <input type="text" name="q" class="searchfield" placeholder="Search..." />
         <input type="hidden" name="check_keywords" value="yes" />
         <input type="hidden" name="area" value="default" />
@@ -97,8 +95,10 @@
     </div>
 
     <div class="footer">
-      &copy; Copyright 2012, Dan Foreman-Mackey & David W. Hogg.
+        Copyright 2012, Dan Foreman-Mackey & David W. Hogg. Released under
+            <a href="https://raw.github.com/dfm/daft/master/LICENSE.rst">MIT License</a>.
     </div>
+
     <a href="https://github.com/dfm/daft" class="github">
         <img style="position: absolute; top: 0; right: 0; border: 0;"
             src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"
