--- a/installation/index.html
+++ b/installation/index.html
@@ -27,7 +27,7 @@
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="top" title="Daft 0.0.1 documentation" href="../" />
     <link rel="next" title="Quckstart" href="../quickstart/" />
-    <link rel="prev" title="User Guide" href="../" />
+    <link rel="prev" title="Daft" href="../" />
 
      
     <link rel="shortcut icon" href="../_static/favicon.png">
@@ -61,7 +61,7 @@
       <div class="sphinxsidebar">
         <div class="sphinxsidebarwrapper"><div class="related">
     <div class="previous">
-        <a href="../" title="previous chapter">&laquo; User Guide</a>
+        <a href="../" title="previous chapter">&laquo; Daft</a>
     </div>
     <div class="next">
         <a href="../quickstart/" title="next chapter">Quckstart &raquo;</a>
