--- a/search/index.html
+++ b/search/index.html
@@ -61,7 +61,7 @@
   </div>
   <p>
     From here you can search these documents. Enter your search
-    words into the box below and click "search". Note that the search
+    words into the box below. Note that the search
     function will automatically search for all of the words. Pages
     containing fewer words won't appear in the result list.
   </p>
