--- a/genindex/index.html
+++ b/genindex/index.html
@@ -28,9 +28,10 @@
     <script type="text/javascript" src="../_static/doctools.js"></script>
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="top" title="Daft 0.0.1 documentation" href="../" />
-
      
+
     <link rel="shortcut icon" href="../_static/favicon.png">
+    <link rel="stylesheet" href="../_static/code.css" type="text/css" />
 
 
   </head>
@@ -84,7 +85,7 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%" valign="top"><dl>
       
-  <dt><a href="../api/#module-daft">daft (module)</a>
+  <dt><a href="../examples/nogray/#module-daft">daft (module)</a>, <a href="../api/#module-daft">[1]</a>
   </dt>
 
   </dl></td>
