--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="top" title="Daft 0.0.1 documentation" href="#" />
     <link rel="next" title="Installation" href="installation/" />
-
      
+
     <link rel="shortcut icon" href="_static/favicon.png">
+    <link rel="stylesheet" href="_static/code.css" type="text/css" />
 
 
   </head>
