--- a/quickstart/index.html
+++ b/quickstart/index.html
@@ -28,9 +28,10 @@
     <link rel="top" title="Daft 0.0.1 documentation" href="../" />
     <link rel="next" title="API" href="../api/" />
     <link rel="prev" title="Installation" href="../installation/" />
-
      
+
     <link rel="shortcut icon" href="../_static/favicon.png">
+    <link rel="stylesheet" href="../_static/code.css" type="text/css" />
 
 
   </head>
