--- a/search/index.html
+++ b/search/index.html
@@ -30,9 +30,10 @@
         jQuery(function() { Search.loadIndex("../searchindex.js"); });
     </script>
     
-
      
+
     <link rel="shortcut icon" href="../_static/favicon.png">
+    <link rel="stylesheet" href="../_static/code.css" type="text/css" />
 
 
 
