--- a/404.html
+++ b/404.html
@@ -9,14 +9,14 @@
 </head>
 
 <body>
-    The daft docs now live at: <a href="http://docs.daft-pgm.org">docs.daft-pgm.org</a>
+    The daft docs now live at: <a href="https://docs.daft-pgm.org">docs.daft-pgm.org</a>
 
     <script>
         var path = window.location.pathname;
         if (path === "/") {
             path = "";
         }
-        window.location.replace("http://docs.daft-pgm.org/en/latest/" + path)
+        window.location.replace("https://docs.daft-pgm.org/en/latest/" + path)
     </script>
 </body>
 
